--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">belief</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <!--bottom navigation-->
+    <string name="bottom_nav_sport">运动</string>
+    <string name="bottom_nav_recipe">发现</string>
+    <string name="bottom_nav_comm">社区</string>
+    <string name="bottom_nav_user">我</string>
 </resources>
