--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -61,4 +61,6 @@
     <!--社区-->
     <string name="everyone_wactching">大家都在看</string>
     <string name="dynamic_details">动态详情</string>
+    <string name="com_name">跟李老师一起爱上开发</string>
+    <string name="com_name1">李晓蕾</string>
 </resources>
