--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,10 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="some_error">出错了</string>
+    <string name="api_retry_error">请重试</string>
+    <string name="api_default_error">业务出错</string>
+    <string name="connection_error">网络连接失败</string>
 
     <!--bottom navigation-->
     <string name="bottom_nav_sport">运动</string>
