尝试把glide3换成4

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -76,6 +76,7 @@
     <!--社区-->
     <string name="everyone_wactching">大家都在看</string>
     <string name="dynamic_details">动态详情</string>
+    <string name="dynamic_share">发布动态</string>
     <string name="com_name">跟李老师一起爱上开发</string>
     <string name="com_name1">李晓蕾</string>
     
